# omx_physical_ai

./: .clangd  .gitattributes  .gitignore  260418.md  AGENTS.md  PLAN_pick_place_IL_RL.md
.claude/hooks/: phase_workflow.py  process_phase_approval.py  register_phase_completion.py
calibration/: wrist_cam.yaml
docs/: ARCHITECTURE.md  AUTOMATION.md  CODING_RULES.md  CONSTRAINTS.md  GOALS.md  LANGUAGE_STRATEGY.md  OMX_PERCEPTION_CALIBRATION.md  OMX_PERCEPTION_PLAN.md  PORTFOLIO_STRATEGY.md  SESSION_NEXT.md  STATUS.md  STRUCTURE.md
docs/superpowers/plans/: 2026-05-04-box-cup-pose-perception.md  2026-05-19-box-cup-world-pose-cpp-port.md
docs/superpowers/specs/: 2026-05-04-box-color-detection-design.md  2026-05-04-box-cup-pose-perception-design.md  2026-05-19-box-cup-world-pose-cpp-port-design.md
runs/pose/box_cup_pose_2class_v3/weights/: best.pt
scripts/: fake_block_server.py
src/omx_bringup/: package.xml  setup.cfg  setup.py
src/omx_bringup/config/: 99-u2d2.rules
src/omx_bringup/config/omx_f/: gripper_traj_controller.yaml  hardware_controller_manager.yaml  kinematics.yaml  moveit_controllers.yaml  omx_f.srdf  omx_f_grasp.ros2_control.xacro  omx_f_with_camera.urdf.xacro  workspace.yaml
src/omx_bringup/launch/: display_robot.launch.py  omx_control.launch.py  omx_moveit.launch.py  omx_preview_gazebo.launch.py
src/omx_bringup/omx_bringup/: trajectory_preview_player.py  workspace_guard.py
src/omx_dynamixel_hw/: CMakeLists.txt  README.md  omx_dynamixel_hw.xml  package.xml
src/omx_dynamixel_hw/config/: dxl_watchdog.yaml
src/omx_dynamixel_hw/include/omx_dynamixel_hw/: control_table.hpp  dxl_bus.hpp  dynamixel_system.hpp  watchdog_logic.hpp
src/omx_dynamixel_hw/src/: control_table.cpp  dxl_bus.cpp  dxl_ping_tool.cpp  dxl_watchdog_node.cpp  dynamixel_system.cpp
src/omx_dynamixel_hw/test/: test_control_table.cpp  test_watchdog_logic.cpp
src/omx_interfaces/: CMakeLists.txt  package.xml
src/omx_interfaces/action/: AlignGripperYaw.action  ExecuteCommand.action  GripperCommand.action  MoveToJoints.action  MoveToNamed.action  MoveToPose.action  PickDetected.action  PickPlace.action  PickPlaceAll.action
src/omx_interfaces/msg/: BlockPose.msg  DynamixelDiagnostics.msg  KeypointDetection.msg  KeypointSample.msg  Top4Box.msg
src/omx_interfaces/srv/: CheckGrasp.srv  ComputeAlignYaw.srv  ExecutePlan.srv  GetBlockPoses.srv  GetKeypointDetections.srv  GetTop4Keypoints.srv  PlanToJoints.srv  RebootDxl.srv
src/omx_llm_planner/: package.xml  setup.cfg  setup.py
src/omx_llm_planner/config/: llm_planner.yaml
src/omx_llm_planner/launch/: llm_planner.launch.py
src/omx_llm_planner/omx_llm_planner/: joint_state_cache.py  llm_client.py  plan_schema.py  planner_node.py  rotate_math.py  skill_clients.py
src/omx_llm_planner/test/: test_joint_state_cache.py  test_llm_client.py  test_plan_schema.py  test_planner_integration.py  test_rotate_math.py  test_skill_clients_new.py
src/omx_motion_server/: CMakeLists.txt  package.xml
src/omx_motion_server/config/: motion_server.yaml
src/omx_motion_server/include/omx_motion_server/: motion_geometry.hpp
src/omx_motion_server/launch/: motion_server.launch.py
src/omx_motion_server/src/: grasp_detector.cpp  motion_geometry.cpp  motion_server.cpp
src/omx_motion_server/test/: test_motion_geometry.cpp
src/omx_perception/: package.xml  setup.cfg  setup.py
src/omx_perception/config/: block_detection.yaml  box_color_reference.yaml  camera_extrinsics.yaml  camera_intrinsics.yaml  camera_params.yaml  color_prototypes.yaml  color_ranges.yaml  perception.yaml
src/omx_perception/launch/: omx_perception.launch.py  perception.launch.py  perception_edge_pc.launch.py  perception_edge_pi.launch.py
src/omx_perception/omx_perception/: __init__.py  block_detection_node.py  box_color_calibrate.py  box_cup_keypoint_node.py  box_cup_pose_node.py  box_cup_pose_snapshot_node.py  box_cup_world_pose_node.py  camera_control_node.py  camera_device.py  camera_geometry.py  camera_supervisor.py  color_calibrator.py  color_classifier.py  color_detector.py  depth_node.py  detector_node.py  get_block_poses_server.py  hsv_tuner.py  perception_pipeline.py  pixel_ray_tool.py  pixel_to_3d.py  top4_keypoints_node.py  top4_world_pose_node.py  tracker_node.py
src/omx_perception/scripts/: auto_label.py  collect_dataset.py  label_review.py  split_dataset.py  train_detector.py
src/omx_perception/test/: test_box_cup_world_pose_helpers.py  test_camera_control.py  test_camera_device.py  test_camera_geometry.py  test_color_classifier.py  test_color_detector.py  test_detector_algorithms.py  test_detector_node_fast_path.py  test_get_block_poses_orientation.py  test_keypoint_node_helpers.py  test_perception_pipeline.py
src/omx_perception_world_pose/: CMakeLists.txt  package.xml
src/omx_perception_world_pose/config/: box_cup_world_pose.yaml
src/omx_perception_world_pose/include/omx_perception_world_pose/: box_cup_world_pose_node.hpp
src/omx_perception_world_pose/launch/: world_pose.launch.py
src/omx_perception_world_pose/src/: box_cup_world_pose_node.cpp
src/omx_perception_world_pose/test/: test_helpers.cpp
src/omx_skill_executor/: package.xml  setup.cfg  setup.py
src/omx_skill_executor/config/: pick_place_skill.yaml  pick_skill.yaml  skill_executor.yaml
src/omx_skill_executor/launch/: pick_place.launch.py  pick_skill.launch.py  skill_executor.launch.py
src/omx_skill_executor/omx_skill_executor/: pick_detected_server.py  pick_place_all_server.py  pick_place_geometry.py  pick_place_server.py  pick_place_skill.py  pick_place_worker.py
src/omx_skill_executor/test/: test_pick_place_geometry.py
tools/: update_compile_commands.sh
