<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omx_bringup</name>
  <version>0.1.0</version>
  <description>OMX Physical AI 데모 bringup 패키지</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Phase B: 로봇 모델 표시 -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>open_manipulator_description</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Phase C -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>open_manipulator_bringup</exec_depend>

  <!-- Phase D: MoveIt2 -->
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>open_manipulator_moveit_config</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
