<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omx_dynamixel_hw</name>
  <version>0.0.0</version>
  <description>Hand-written ros2_control SystemInterface for OMX DYNAMIXEL bus on dynamixel_sdk</description>
  <maintainer email="kjhgfd6631@gmail.com">kjhz</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>dynamixel_sdk</depend>
  <depend>realtime_tools</depend>
  <depend>omx_interfaces</depend>
  <depend>controller_manager_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <hardware_interface plugin="${prefix}/omx_dynamixel_hw.xml" />
  </export>
</package>
