<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omx_interfaces</name>
  <version>0.0.0</version>
  <description>Custom msg/srv/action interfaces for the OMX manipulator project</description>
  <maintainer email="kjhgfd6632@gmail.com">kjhz</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>

  <member_of_group>rosidl_interface_packages</member_of_group> <!-- 인터페이스 전용 패키지-->

  <exec_depend>rosidl_default_runtime</exec_depend> <!-- 생성된 인터페이스를 런타임에 사용하기 위한 의존성-->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
